--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-router-dom": "^7.12.0",
+    "@microsoft/clarity": "^1.0.2",
+    "framer-motion": "^12.27.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "framer-motion": "^12.27.1"
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
